# PixelJAM

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: .ultilities.h.swp  appliance.h  cable.h  entity.h  game.h  map_loader.h  memory_arena.h  physics.h  pixel_perfect.h  sprite_manager.h  ultilities.h
src/: appliance.c  cable.c  entity.c  game.c  main.c  map_loader.c  memory_arena.c  physics.c  pixel_perfect.c  sprite_manager.c
